--- a/index.html
+++ b/index.html
@@ -22,12 +22,22 @@
             </a-assets>
         　　　　　　　　<!-- こっからARの世界。マーカー上になにを展開するかを書く -->
             <a-marker preset="hiro">
-                <a-obj-model id="santa" src="#tree-obj" mtl="#tree-mtl" position="0 0 0" scale="0.5 0.5 0.5" rotation="0 0 0"></a-obj-model>
+                <a-obj-model id="santa" src="#tree-obj" mtl="#tree-mtl" position="0 0 0" scale="0.25 0.25 0.25" rotation="0 0 0"></a-obj-model>
                 <a-text value="Hello YouTube！!！" position="0 1.3 0" align="center"></a-text>
             </a-marker>
             <!-- arなのでこんな感じでカメラが必要らしい。 -->
             <a-entity camera></a-entity>
         </a-scene>
         <!-- ここまででA-Frameおわり -->
+
+        <script type="text/javascript">
+            function init() {
+                const sceneEl = document.querySelector('a-scene');
+                sceneEl.addEventListener('loaded', () => {
+                    alert('読み込み完了');
+                });
+            }
+            init();
+        </script>
     </body>
 </html>
