--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             function init() {
                 const sceneEl = document.querySelector('a-scene');
                 sceneEl.addEventListener('loaded', () => {
+                    console.log('loaded');
                     alert('読み込み完了');
                 });
             }
