--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.0/aframe/build/aframe-ar.js"></script>
     </head>
     <body style='margin:0px; overflow:hidden;'>
+        <div id="loadtext" style="text-align:center;">
+            読み込み中だよ
+        </div>
         <a-scene embedded arjs="debugUIEnabled:false;trackingMethod:best;" vr-mode-ui="enabled: false">
             <!-- オブジェクトファイルとマテリアルファイルを読み込む -->
             <a-assets>
@@ -33,9 +36,11 @@
         <script type="text/javascript">
             function init() {
                 const sceneEl = document.querySelector('a-scene');
+                const loadDocm = document.getElementById('loadtext');
                 sceneEl.addEventListener('loaded', () => {
                     console.log('loaded');
                     alert('読み込み完了');
+                    loadDocm.style.display = "none";
                 });
             }
             init();
