--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.0/aframe/build/aframe-ar.js"></script>
     </head>
     <body style='margin:0px; overflow:hidden;'>
-        <div id="loadtext" style="text-align:center;">
+        <div id="loadtext" style="text-align:center; color: black;">
             読み込み中だよ
         </div>
         <a-scene embedded arjs="debugUIEnabled:false;trackingMethod:best;" vr-mode-ui="enabled: false">
